Xpetra: add new method and test to MatrixUtils
This helper function takes an existing matrix and user-given striding
information, creates StridedMap objects for range and domain map and
sets them as "stridedMaps" view in the matrix.

--- a/packages/xpetra/test/CMakeLists.txt
+++ b/packages/xpetra/test/CMakeLists.txt
@@ -18,6 +18,7 @@ ADD_SUBDIRECTORIES(
 # Tests specifically written for Xpetra:
   Matrix
   MatrixMatrix
+  MatrixUtils
   )
 
 # uncomment this to ensure Xpetra header files include all necessary dependencies
