Framework: Fix PATH environment var for the CUDA 10.1.243 build

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -367,7 +367,7 @@ unsetenv PATH_TMP:
 
 
 [Trilinos_pullrequest_cuda_10.1.243]
-module-load StdEnv: 
+module-load StdEnv:
 module-load sparc-dev: cuda-10.1.243_gcc-7.3.1_spmpi-rolling
 module-swap gcc/7.3.1: gcc/8.3.1
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
@@ -375,8 +375,8 @@ setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
-setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
-setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+setenv PATH_TMP: /projects/atdm_devops/vortex/cmake-3.17.2/bin
+setenv PATH:     /projects/atdm_devops/vortex/ninja-fortran-1.8.2:${PATH_TMP}
 unsetenv PATH_TMP:
 
 
