Added stabilized linearly constrained lagrangian algorithm.

--- a/packages/rol/src/CMakeLists.txt
+++ b/packages/rol/src/CMakeLists.txt
@@ -157,6 +157,7 @@ INCLUDE_DIRECTORIES(${DIR}
                     ${DIR}/TypeG/fletcher
                     ${DIR}/TypeG/interiorpoint
                     ${DIR}/TypeG/moreauyosida
+                    ${DIR}/TypeG/stabilizedlcl
                     ${DIR}/TypeU/bundle
                     ${DIR}/TypeU/linesearch
                     ${DIR}/TypeU/linesearch/descent
