--- a/packages/rol/test/algorithm/TypeG/CMakeLists.txt
+++ b/packages/rol/test/algorithm/TypeG/CMakeLists.txt
@@ -26,6 +26,15 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   ADD_DIR_TO_NAME
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  StabilizedLCL
+  SOURCES test_04.cpp
+  ARGS PrintItAll
+  NUM_MPI_PROCS 1
+  PASS_REGULAR_EXPRESSION "TEST PASSED"
+  ADD_DIR_TO_NAME
+  )
+
 TRIBITS_COPY_FILES_TO_BINARY_DIR(
   TypeGTestDataCopy
   SOURCE_FILES
