Framework: Add TRILINOS_DIR envvar to the cuda 10.1.243 job

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -373,6 +373,7 @@ module-swap gcc/7.3.1: gcc/8.3.1
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
+setenv TRILINOS_DIR: ${WORKSPACE}/Trilinos
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
 setenv PATH_TMP: /projects/atdm_devops/vortex/cmake-3.17.2/bin
