Setup Intel 19.0.5 build

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -96,7 +96,8 @@ Trilinos_pullrequest_gcc_7.2.0_serial: PullRequestLinuxGCC7.2.0SerialTestingSett
 Trilinos_pullrequest_gcc_8.3.0:        PullRequestLinuxGCC8.3.0TestingSettings.cmake
 
 # Intel Builds
-Trilinos_pullrequest_intel_17.0.1:     PullRequestLinuxIntelTestingSettings.cmake
+Trilinos_pullrequest_intel_17.0.1:     PullRequestLinuxIntel17.0.1TestingSettings.cmake
+Trilinos_pullrequest_intel_19.0.5:     PullRequestLinuxIntel19.0.5TestingSettings.cmake
 
 # Python PR Driver Builds
 #Trilinos_pullrequest_python_2:         PullRequestLinuxPython2.cmake
@@ -274,6 +275,19 @@ use SEMS-ENV:
 use ATDM-ENV:
 module-load sems-gcc: 5.3.0
 module-load sems-intel: 17.0.1
+module-load sems-mpich: 3.2
+use SEMS-DEFAULT:
+module-remove sems-openmpi:
+use ATDM-DEFAULT:
+setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
+
+
+
+[Trilinos_pullrequest_intel_19.0.5]
+use SEMS-ENV:
+use ATDM-ENV:
+module-load sems-gcc: 6.1.0
+module-load sems-intel: 19.0.5
 module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 module-remove sems-openmpi:
