--- a/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
+++ b/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
@@ -93,7 +93,8 @@ Trilinos_pullrequest_gcc_7.2.0:        PullRequestLinuxGCC7.2.0TestingSettings.c
 Trilinos_pullrequest_gcc_8.3.0:        PullRequestLinuxGCC8.3.0TestingSettings.cmake
 
 # Intel Builds
-Trilinos_pullrequest_intel_17.0.1:     PullRequestLinuxIntelTestingSettings.cmake
+Trilinos_pullrequest_intel_17.0.1:     PullRequestLinuxIntel17.0.1TestingSettings.cmake
+Trilinos_pullrequest_intel_19.0.5:     PullRequestLinuxIntel19.0.5TestingSettings.cmake
 
 # Python PR Driver Builds
 #Trilinos_pullrequest_python_2:         PullRequestLinuxPython2.cmake
@@ -215,6 +216,18 @@ use SEMS-ENV:
 use ATDM-ENV:
 module-load sems-gcc: 4.9.3
 module-load sems-intel: 17.0.1
+module-load sems-mpich: 3.2
+use SEMS-DEFAULT:
+use ATDM-DEFAULT:
+setenv SEMS_FORCE_LOCAL_COMPILER_VERSION: 4.9.3
+
+
+
+[Trilinos_pullrequest_intel_19.0.5]
+use SEMS-ENV:
+use ATDM-ENV:
+module-load sems-gcc: 6.1.0
+module-load sems-intel: _19.0.5
 module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 use ATDM-DEFAULT:
