--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -368,6 +368,7 @@ unsetenv PATH_TMP:
 
 [Trilinos_pullrequest_cuda_10.1.243]
 module-load StdEnv:
+module-load git: 2.20.0
 module-load sparc-dev: cuda-10.1.243_gcc-7.3.1_spmpi-rolling
 module-swap gcc/7.3.1: gcc/8.3.1
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
