--- a/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
+++ b/cmake/std/trilinosprhelpers/unittests/trilinos_pr_test.ini
@@ -254,6 +254,27 @@ module-load sems-cmake: 3.12.2
 
 
 
+[Trilinos_pullrequest_clang_10.0.0]
+use SEMS-ENV:
+module-load sems-git: 2.10.1
+module-load sems-gcc: 5.3.0
+module-load sems-clang: 10.0.0
+module-load sems-openmpi: 1.10.1
+#module-load sems-python: 3.5.2
+use SIERRA-PYTHON-3.6.3:
+module-load sems-boost: 1.69.0/base
+module-load sems-zlib: 1.2.8/base
+module-load sems-hdf5: 1.10.6/parallel
+module-load sems-netcdf: 4.7.3/parallel
+module-load sems-parmetis: 4.0.3/parallel
+module-load sems-scotch: 6.0.3/nopthread_64bit_parallel
+module-load sems-superlu: 4.3/base
+module-load sems-cmake: 3.17.1
+module-load sems-ninja_fortran: 1.10.0
+setenv OMP_NUM_THREADS: 2
+
+
+
 [Trilinos_pullrequest_cuda_9.2]
 module-load git: 2.10.1
 module-load devpack: 20180521/openmpi/2.1.2/gcc/7.2.0/cuda/9.2.88
