--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -377,7 +377,7 @@ setenv OMPI_FC: ${FC}
 setenv TRILINOS_DIR: ${WORKSPACE}/Trilinos
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
-setenv PATH_TMP: /projects/atdm_devops/vortex/cmake-3.17.2/bin
+setenv PATH_TMP: /projects/atdm_devops/vortex/cmake-3.17.2/bin:${PATH}
 setenv PATH:     /projects/atdm_devops/vortex/ninja-fortran-1.8.2:${PATH_TMP}
 unsetenv PATH_TMP:
 
