--- a/packages/rol/test/algorithm/TypeB/CMakeLists.txt
+++ b/packages/rol/test/algorithm/TypeB/CMakeLists.txt
@@ -108,7 +108,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   )
 
 TRIBITS_ADD_EXECUTABLE_AND_TEST(
-  TrustRegionPSG
+  TrustRegionSPG
   SOURCES test_13.cpp
   ARGS PrintItAll
   NUM_MPI_PROCS 1
