--- a/packages/zoltan2/test/core/ADColorer/CMakeLists.txt
+++ b/packages/zoltan2/test/core/ADColorer/CMakeLists.txt
@@ -3,7 +3,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
       ADColorer
       NAME ADColorer_simple
       SOURCES ADColorer.cpp
-      ARGS "--file=simple.mtx"
+      ARGS "--file=simple"
       COMM serial mpi
       PASS_REGULAR_EXPRESSION "PASS"
       FAIL_REGULAR_EXPRESSION "FAIL"
@@ -20,3 +20,11 @@ TRIBITS_ADD_TEST(
 )
 ENDIF()
   
+# Command that copies files to the executable directory.
+TRIBITS_COPY_FILES_TO_BINARY_DIR(copy_files_for_adcolor_tests
+  SOURCE_FILES
+    simple.mtx
+  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../data
+  DEST_DIR ${CMAKE_CURRENT_BINARY_DIR}
+)
+
