Create cuda 10.1.105 build

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -86,6 +86,8 @@ Trilinos_pullrequest_clang_10.0.0:     PullRequestLinuxClang10.0.0TestingSetting
 
 # CUDA Testing
 Trilinos_pullrequest_cuda_9.2:         PullRequestLinuxCuda9.2TestingSettings.cmake
+Trilinos_pullrequest_cuda_10.1.105:         PullRequestLinuxCuda10.1.105TestingSettings.cmake
+
 
 # GCC Builds
 Trilinos_pullrequest_gcc_4.8.4:        PullRequestLinuxGCC4.8.4TestingSettings.cmake
@@ -346,6 +348,22 @@ setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PA
 unsetenv PATH_TMP:
 
 
+
+[Trilinos_pullrequest_cuda_10.1.105]
+module-load git: 2.10.1
+module-load devpack: 20190404/openmpi/4.0.1/gcc/7.2.0/cuda/10.1.105
+module-swap openblas/0.3.4/gcc/7.4.0: netlib/3.8.0/gcc/7.2.0
+setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
+setenv OMPI_CC: ${CC}
+setenv OMPI_FC: ${FC}
+setenv CUDA_LAUNCH_BLOCKING: 1
+setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
+setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
+setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+unsetenv PATH_TMP:
+
+
+
 [Trilinos_pullrequest_gcc_8.3.0_installation_testing]
 use Trilinos_pullrequest_gcc_8.3.0:
 
@@ -386,5 +404,3 @@ use SIERRA-PYTHON-3.6.3:
 #module-load sems-python: 3.5.2
 #setenv PYTHONPATH: "${SEMS_PYTHON_LIBRARY_PATH}/python3.5/site-packages"
 #setenv MANPATH:    "${SEMS_PYTHON_LIBRARY_PATH}/../share/man"
-
-
