Reduce level of granularity of time monitoring

--- a/packages/adelus/CMakeLists.txt
+++ b/packages/adelus/CMakeLists.txt
@@ -15,6 +15,7 @@ IF(${PACKAGE_NAME}_ENABLE_Teuchos AND (${PROJECT_NAME}_TEST_CATEGORIES STREQUAL 
   MESSAGE("     Adelus_ENABLE Teuchos is ON AND TEST_CATEGORIES is PERFORMANCE")
   SET(${PACKAGE_NAME}_ENABLE_TIMING ON CACHE BOOL "Enable timing." FORCE)
   SET(${PACKAGE_NAME}_ENABLE_PRINTSTATUS ON CACHE BOOL "Enable status print." FORCE)
+  SET(ADELUS_HAVE_TIME_MONITOR ON)
 ENDIF()
 
 #If no options are specified set ZCPLX as the default
