Framework: Bugfix for cycle detection PR configurations
The cycle-detection logic in the PR driver setenvironment module
had a minor bug that resulted in an overly aggressive 'cycle prevention'
mode.

For example, section dependencies like this would be blocked:
```
A -> B -> C -> B
```

but we also blocked this:
```
A -> B -> C
A -> B
```

This fixes the issue by popping off the sections from the 'seen list' as
we pop out of scope during the recursive module that scans through the
configurations.

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -154,9 +154,12 @@ setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${
 unsetenv PATH_TMP:
 
 
+[MODULE-PURGE]
+module-purge:
+
 
 [SEMS-ENV]
-module-purge:
+use MODULE-PURGE:
 module-use: /projects/sems/modulefiles/projects
 module-load sems-env:
 
