zoltan: adding C++ test; made a few changes to proposed interface

--- a/packages/zoltan/test/misc_tests/CMakeLists.txt
+++ b/packages/zoltan/test/misc_tests/CMakeLists.txt
@@ -13,3 +13,14 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   PASS_REGULAR_EXPRESSION "PASS"
   )
 
+IF (${PACKAGE_NAME}_ENABLE_CPPDRIVER)
+
+  TRIBITS_ADD_EXECUTABLE_AND_TEST(
+    copyZZ_cpp
+    SOURCES copyZZ.cpp
+    COMM serial mpi
+    FAIL_REGULAR_EXPRESSION "FAIL"
+    PASS_REGULAR_EXPRESSION "PASS"
+    )
+
+ENDIF()
