--- a/packages/muelu/src/CMakeLists.txt
+++ b/packages/muelu/src/CMakeLists.txt
@@ -68,6 +68,9 @@ ENDIF()
 IF (${PACKAGE_NAME}_ENABLE_Intrepid2)
   INCLUDE_DIRECTORIES(${DIR}/Transfers/PCoarsen)
 ENDIF()
+IF (${PACKAGE_NAME}_ENABLE_Experimental)
+  INCLUDE_DIRECTORIES(${DIR}/../research/regionMG/src)
+ENDIF()
 
 # Function to generate ETI (explicit template instantiation) files
 # from a template and list of class names
