--- a/packages/rol/adapters/kokkos/CMakeLists.txt
+++ b/packages/rol/adapters/kokkos/CMakeLists.txt
@@ -1,3 +1,4 @@
 ADD_SUBDIRECTORIES(src)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/vector)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/elementwise)
 TRIBITS_ADD_TEST_DIRECTORIES(test)
