MueLu Maxwell test: Test Stratimikos subsolves

--- a/packages/muelu/test/maxwell/CMakeLists.txt
+++ b/packages/muelu/test/maxwell/CMakeLists.txt
@@ -47,6 +47,7 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
         NAME "Maxwell3D-Tpetra-Stratimikos"
         ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell.xml"
         ARGS "--linAlgebra=Tpetra --solverName=Stratimikos --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell2.xml"
+        ARGS "--linAlgebra=Tpetra --instantiation=DOUBLE_INT_INT --reuse --xml=Maxwell3.xml"
         COMM serial mpi
         NUM_MPI_PROCS 4
         )
@@ -63,6 +64,17 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
       NUM_MPI_PROCS 4
       )
 
+    IF (${PACKAGE_NAME}_ENABLE_Stratimikos)
+      TRIBITS_ADD_TEST(
+        Maxwell3D
+        NAME "Maxwell3D-Epetra-Stratimikos"
+        ARGS "--linAlgebra=Epetra --solverName=Stratimikos --reuse --xml=Maxwell.xml"
+        ARGS "--linAlgebra=Epetra --reuse --xml=Maxwell3.xml"
+        COMM serial mpi
+        NUM_MPI_PROCS 4
+        )
+    ENDIF()
+
     IF (${PACKAGE_NAME}_ENABLE_ML)
 
       TRIBITS_ADD_TEST(
@@ -77,7 +89,7 @@ IF (${PACKAGE_NAME}_ENABLE_Belos)
 
 
   TRIBITS_COPY_FILES_TO_BINARY_DIR(Maxwell_cp
-    SOURCE_FILES M0.mat M1.mat S.mat D0.mat coords.mat Belos.xml Maxwell.xml Maxwell2.xml Maxwell_ML.xml Maxwell_ML_MueLu.xml Maxwell_ML1.xml
+    SOURCE_FILES M0.mat M1.mat S.mat D0.mat coords.mat Belos.xml Maxwell.xml Maxwell2.xml Maxwell3.xml Maxwell_ML.xml Maxwell_ML_MueLu.xml Maxwell_ML1.xml
     )
 
   IF(HAVE_MUELU_COMPLEX)
