Piro: allows to enable or disable HessianScaledThyraVector

--- a/packages/piro/test/CMakeLists.txt
+++ b/packages/piro/test/CMakeLists.txt
@@ -116,6 +116,8 @@ IF (Piro_ENABLE_NOX)
       Main_AnalysisDriver_Tpetra.cpp
       MockModelEval_A_Tpetra.cpp
       MockModelEval_A_Tpetra.hpp
+      MockModelEval_B_Tpetra.cpp
+      MockModelEval_B_Tpetra.hpp
     NUM_MPI_PROCS 1-4
     ARGS -v
     PASS_REGULAR_EXPRESSION "TEST PASSED"
