Framework: Update config.ini for CUDA builds to use atdm-devops-admin version of cmake 3.17.2

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -86,7 +86,7 @@ Trilinos_pullrequest_clang_10.0.0:     PullRequestLinuxClang10.0.0TestingSetting
 
 # CUDA Testing
 Trilinos_pullrequest_cuda_9.2:         PullRequestLinuxCuda9.2TestingSettings.cmake
-Trilinos_pullrequest_cuda_10.1.105:         PullRequestLinuxCuda10.1.105TestingSettings.cmake
+Trilinos_pullrequest_cuda_10.1.105:    PullRequestLinuxCuda10.1.105TestingSettings.cmake
 
 
 # GCC Builds
@@ -337,13 +337,14 @@ setenv OMP_NUM_THREADS: 2
 module-load git: 2.10.1
 module-load devpack: 20180521/openmpi/2.1.2/gcc/7.2.0/cuda/9.2.88
 module-swap openblas/0.2.20/gcc/7.2.0: netlib/3.8.0/gcc/7.2.0
+module-unload cmake
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
 setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
-setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+setenv PATH:     /home/atdm-devops-admin/tools/ride/cmake-3.17.2/bin:${PATH_TMP}
 unsetenv PATH_TMP:
 
 
@@ -352,13 +353,14 @@ unsetenv PATH_TMP:
 module-load git: 2.10.1
 module-load devpack: 20190404/openmpi/4.0.1/gcc/7.2.0/cuda/10.1.105
 module-swap openblas/0.3.4/gcc/7.4.0: netlib/3.8.0/gcc/7.2.0
+module-unload cmake
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
 setenv CUDA_LAUNCH_BLOCKING: 0
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
 setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
-setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+setenv PATH:     /home/atdm-devops-admin/tools/ride/cmake-3.17.2/bin:${PATH_TMP}
 unsetenv PATH_TMP:
 
 
