Framework: fixed syntax error in pullrequest.ini

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -337,7 +337,7 @@ setenv OMP_NUM_THREADS: 2
 module-load git: 2.10.1
 module-load devpack: 20180521/openmpi/2.1.2/gcc/7.2.0/cuda/9.2.88
 module-swap openblas/0.2.20/gcc/7.2.0: netlib/3.8.0/gcc/7.2.0
-module-unload cmake
+module-unload cmake:
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
@@ -353,7 +353,7 @@ unsetenv PATH_TMP:
 module-load git: 2.10.1
 module-load devpack: 20190404/openmpi/4.0.1/gcc/7.2.0/cuda/10.1.105
 module-swap openblas/0.3.4/gcc/7.4.0: netlib/3.8.0/gcc/7.2.0
-module-unload cmake
+module-unload cmake:
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
