MueLu: add unit tests for TestHelpers class

--- a/packages/muelu/test/unit_tests/CMakeLists.txt
+++ b/packages/muelu/test/unit_tests/CMakeLists.txt
@@ -52,6 +52,7 @@ APPEND_SET(SOURCES
   StructuredAggregationFactory.cpp
   StructuredLineDetection.cpp
   TentativePFactory.cpp
+  TestsForTestHelpers.cpp
   ThresholdAFilterFactory.cpp
   TransPFactory.cpp
   UnsmooshFactory.cpp
