Attempt to resolve confusion  on c++ compiler
We are using nvcc_wrapper yet it is complaining
that the c++ compiler is g++. I think we are over-
constrained (?).

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -371,12 +371,9 @@ module-load StdEnv:
 module-load git: 2.20.0
 module-load sparc-dev: cuda-10.1.243_gcc-7.3.1_spmpi-rolling
 module-swap gcc/7.3.1: gcc/8.3.1
-setenv CXX: g++
-setenv CC: gcc
-setenv FC: gfortran
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
-setenv OMPI_CC: ${CC}
-setenv OMPI_FC: ${FC}
+setenv OMPI_CC: gcc
+setenv OMPI_FC: gfortran
 setenv TRILINOS_DIR: ${WORKSPACE}/Trilinos
 setenv CUDA_LAUNCH_BLOCKING: 1
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
