--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -276,6 +276,12 @@ module-load sems-intel: 17.0.1
 module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 module-remove sems-openmpi:
+
+# Note: sems-cmake/3.17.1 might be problematic for intel 17.0.1
+#       CMake fails compiler test of trivial program.
+#       So, let's try SEMS CMake 3.19.1.
+module-remove sems-cmake:
+module-load   sems-cmake: 3.19.1
 use ATDM-DEFAULT:
 
 
