Framework: Setting Intel build CMake back down to 3.10.3 for testing
The intel build fails the hello-world compiler check for the F90
compiler (mpif90) in CMake 3.17 and 3.19.  This commit is intended
to reset the compiler we're using for the Intel compiler build back
to 3.10.3 to see if it passes in the PR.  If it does, this gives us
a data point that there _is_ some kind of issue going on with the
newer version(s) of CMake and the Intel compiler.

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -281,7 +281,8 @@ module-remove sems-openmpi:
 #       CMake fails compiler test of trivial program.
 #       So, let's try SEMS CMake 3.19.1.
 module-remove sems-cmake:
-module-load   sems-cmake: 3.19.1
+#module-load   sems-cmake: 3.19.1
+module-load sems-cmake: 3.10.3
 use ATDM-DEFAULT:
 
 
