Add global binary reader tests

--- a/packages/tpetra/core/test/inout/CMakeLists.txt
+++ b/packages/tpetra/core/test/inout/CMakeLists.txt
@@ -110,6 +110,103 @@ TRIBITS_ADD_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+TRIBITS_ADD_EXECUTABLE(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  SOURCES
+    MatrixMarket_Tpetra_CrsMatrix_Dist_Binary.cpp
+  COMM serial mpi
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_simple
+  ARGS "--file=simple.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 1
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_simple
+  ARGS "--file=simple.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 3
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_simple
+  ARGS "--file=simple.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 4
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_simple
+  ARGS "--file=simple.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 6
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_simple
+  ARGS "--file=simple.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 10
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_rmat
+  ARGS "--file=rmat_11_lap.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 1
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_rmat
+  ARGS "--file=rmat_11_lap.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 3
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_rmat
+  ARGS "--file=rmat_11_lap.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 4
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_rmat
+  ARGS "--file=rmat_11_lap.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 6
+  STANDARD_PASS_OUTPUT
+  )
+
+TRIBITS_ADD_TEST(
+  MatrixMarket_Tpetra_CrsMatrix_Dist_Binary
+  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_Binary_rmat
+  ARGS "--file=rmat_11_lap.mtx"
+  COMM mpi
+  NUM_MPI_PROCS 10
+  STANDARD_PASS_OUTPUT
+  )
+
 #TRIBITS_ADD_TEST(
 #  MatrixMarket_Tpetra_CrsMatrix_Dist
 #  NAME MatrixMarket_Tpetra_CrsMatrix_Dist_rmatbin
