Framework: testing cmake updates and intel compiler error

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -280,9 +280,9 @@ module-remove sems-openmpi:
 # Note: sems-cmake/3.17.1 might be problematic for intel 17.0.1
 #       CMake fails compiler test of trivial program.
 #       So, let's try SEMS CMake 3.19.1.
-#module-remove sems-cmake:
+module-remove sems-cmake:
 #module-load   sems-cmake: 3.19.1
-#module-load sems-cmake: 3.10.3
+module-load sems-cmake: 3.10.3
 use ATDM-DEFAULT:
 
 
