Framework: intel 17 build with CMake 3.17.x

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -284,6 +284,7 @@ module-remove sems-openmpi:
 #module-load   sems-cmake: 3.19.1
 #module-load sems-cmake: 3.10.3
 use ATDM-DEFAULT:
+# setenv LDFLAGS: -lifcore
 
 
 
