--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -277,7 +277,7 @@ module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 module-remove sems-openmpi:
 use ATDM-DEFAULT:
-# setenv LDFLAGS: -lifcore
+setenv LDFLAGS: -lifcore
 
 
 
