--- a/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
+++ b/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
@@ -441,6 +441,13 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  Redistribute
+  SOURCES
+  Redistribute.cpp
+  COMM mpi
+  STANDARD_PASS_OUTPUT
+  )
 
 
 SET(TIMING_INSTALLS "")
