--- a/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
+++ b/packages/tpetra/core/test/CrsMatrix/CMakeLists.txt
@@ -446,7 +446,17 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   SOURCES
   Redistribute.cpp
   COMM mpi
-  STANDARD_PASS_OUTPUT
+  PASS_REGULAR_EXPRESSION "PASS"
+  FAIL_REGULAR_EXPRESSION "FAIL"
+  )
+
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  Redistribute2
+  SOURCES
+  Redistribute2.cpp
+  COMM mpi
+  PASS_REGULAR_EXPRESSION "PASS"
+  FAIL_REGULAR_EXPRESSION "FAIL"
   )
 
 
