--- a/commonTools/framework/CMakeLists.txt
+++ b/commonTools/framework/CMakeLists.txt
@@ -71,7 +71,7 @@ TRIBITS_ADD_ADVANCED_TEST( PullRequestLinuxDriverTest_UnitTests
         ARGS pr_python_test_driver.sh ${PYTHON_EXECUTABLE} ${PYTHON_PIP_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/std
         SKIP_CLEAN_WORKING_DIRECTORY
-        PASS_REGULAR_EXPRESSION "^=+ [0-9]+ passed in"
+        PASS_REGULAR_EXPRESSION "=+ [0-9]+ passed in"
         #ALWAYS_FAIL_ON_NONZERO_RETURN
 )
 # Note: pytest output looks like this:
