Add environment variable for intel configure with intel 19
A previous PR had set this up for intel 17 and
subsequent testing showed a problem with intel 19
as well. This also adds the environment variables
to the evn.sh scripts for reproducing builds.

--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -290,7 +290,7 @@ module-load sems-mpich: 3.2
 use SEMS-DEFAULT:
 module-remove sems-openmpi:
 use ATDM-DEFAULT:
-# setenv LDFLAGS: -lifcore
+setenv LDFLAGS: -lifcore
 
 
 
