adding localview tests

--- a/packages/tpetra/core/test/MultiVector/CMakeLists.txt
+++ b/packages/tpetra/core/test/MultiVector/CMakeLists.txt
@@ -59,6 +59,16 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
   STANDARD_PASS_OUTPUT
   )
 
+TRIBITS_ADD_EXECUTABLE_AND_TEST(
+  MultiVector_LocalViewTests
+  SOURCES
+    MultiVector_LocalViewTests
+    ${TEUCHOS_STD_UNIT_TEST_MAIN}
+  COMM serial mpi
+  STANDARD_PASS_OUTPUT
+  ${MAXNP}
+  )
+
 # This test requires exactly 2 MPI processes.  It could be rewritten
 # so that it will run with more, but then the test would just waste
 # the remaining processes.
