--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -370,13 +370,14 @@ unsetenv PATH_TMP:
 module-load git: 2.10.1
 module-load devpack: 20190404/openmpi/4.0.1/gcc/7.2.0/cuda/10.1.105
 module-swap openblas/0.3.4/gcc/7.4.0: netlib/3.8.0/gcc/7.2.0
+module-unload cmake:
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: ${CC}
 setenv OMPI_FC: ${FC}
 setenv CUDA_LAUNCH_BLOCKING: 0
 setenv CUDA_MANAGED_FORCE_DEVICE_ALLOC: 1
 setenv PATH_TMP: /ascldap/users/rabartl/install/white-ride/ninja-1.8.2/bin:${PATH}
-setenv PATH:     /ascldap/users/rabartl/install/white-ride/cmake-3.11.2/bin:${PATH_TMP}
+setenv PATH:     /home/atdm-devops-admin/tools/ride/cmake-3.17.2/bin:${PATH_TMP}
 unsetenv PATH_TMP:
 
 
@@ -394,5 +395,3 @@ use ATDM-DEFAULT:
 module-load sems-git: 2.10.1
 module-load sems-cmake: 3.17.1
 use SIERRA-PYTHON-3.6.3:
-
-
