--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -370,6 +370,7 @@ unsetenv PATH_TMP:
 module-load StdEnv:
 module-load git: 2.20.0
 module-load sparc-dev: cuda-10.1.243_gcc-7.3.1_spmpi-rolling
+module-swap python/2.7.16: python/3.8.2
 module-swap gcc/7.3.1: gcc/8.3.1
 setenv OMPI_CXX: ${WORKSPACE}/Trilinos/packages/kokkos/bin/nvcc_wrapper
 setenv OMPI_CC: gcc
